added post/get/delete endpoints for student profile pics
